[package]
name = "zipo"
version = "0.1.0"
authors = ["Bai-Jinlin <windowsbai@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5"
walkdir = "2"
clap = "2.33.3"
rayon = "1.5"
indicatif = "0.15.0"
regex = "1.4.5"
