[package]
name = "rust_lib_flutter_application_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.91"
axum = "0.7.7"
flutter_rust_bridge = "=2.5.1"
local-ip-address = "0.6.3"
log = "0.4.22"
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = "0.7.12"
tower-http = { version = "0.6.1", features = ["fs"] }
zipo_lib = {path ="../zipo_lib"}