[package]
# name = "rust_lib_flutter_application_test"
name = "rust_lib_zipo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.91"
axum = { version = "0.7.7", features = ["json"] }
flutter_rust_bridge = "=2.6.0"
local-ip-address = "0.6.3"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = "0.7.12"
tower-http = { version = "0.6.1", features = ["fs","trace"] }
urlencoding = "2.1.3"
zipo_lib = {path ="../zipo_lib"}
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }