[package]
name = "zipo_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
crossbeam-queue = "0.3.11"
dunce = "1.0.4"
log = "0.4.22"
num_cpus = "1.16.0"
regex = "1.10.2"
walkdir = "2.4.0"
zip = { version = "0.6.6",default-features = false, features = ["deflate"] }